feat(list-users): implement list users functionality (#25)
- write tests for list of users endpoint
- create endpoint to get list of users
- refractor getProfile method to be useful for both logged in user and user id provided in parameter
- removed unused dependency slug
- covered more test cases to increase test coverage
[Delivers #160452489]
