# swagger.yaml
@@ -641,7 +641,6 @@ paths:
         - application/json
       produces:
         - application/json
-      
       parameters:
         - name: userId
           in: path
@@ -719,6 +718,56 @@ paths:
       security:
         - UserSecurity: []
 
+  /users/list:
+    get:
+      summary: Get a list of authors
+      parameters:
+        - name: "page"
+          in: "query"
+          description: "Page number"
+          required: false
+          type: "number"
+        - name: "size"
+          in: "query"
+          description: "The number of authors info per page"
+          required: false
+          type: "number"
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ProfileListResponse"
+        "400":
+          description: Bad Request
+        "500":
+          description: Server Error
+      tags:
+        - Users
+      security:
+        - UserSecurity: []
+  /users/{id}:
+    get:
+      summary: Get user(author) by id
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "id of the user"
+          required: true
+          type: "number"
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/ProfileResponse"
+        "400":
+          description: Bad Request
+        "500":
+          description: Server Error
+      tags:
+        - Users
+      security:
+        - UserSecurity: []
+        
 definitions:
   UserRequest:
     required:
@@ -1021,6 +1070,9 @@ definitions:
         example: password
   ProfileResponse:
     properties:
+      id:
+        type: number
+        example: 1
       username:
         type: string
         example: hammed
@@ -1075,8 +1127,6 @@ definitions:
       message:
         type: string
         example: Password has been successfully reset!.
-
-
   LikeRequest:
     required:
       - slug
@@ -1089,14 +1139,37 @@ definitions:
       type: string
       example: like
   LikeResult:
-      message:
-        type: string
-        example: successfully liked an article
-    
-  properties:
+    message:
+      type: string
+      example: successfully liked an article
+    properties:
       status:
         type: string
         example: error
       message:
         type: string
         example: user already liked this article
+  ProfileListResponse:
+    properties:
+      status:
+        type: string
+        example: success
+      message:
+        type: string
+        example: Successfully retrieved list of authors.
+      data:
+        type: object
+        properties:
+          total:
+            type: number
+            example: 3
+          size:
+            type: number
+            example: 2
+          page:
+            type: number
+            example: 1
+          authors:
+            type: array
+            items:
+              $ref: '#/definitions/ProfileResponse'
